src/nationalarchives/components/compound-filters/compound-filters.scss
@use "../../tools/colour";
@use "../../tools/spacing";
@use "../../tools/typography";

.tna-compound-filters {
  @include spacing.space-above;

  display: flex;
  flex-wrap: wrap;
  align-items: center;
  gap: spacing.space(0.5) spacing.space(0.75);

  list-style: none;

  &__item {
    padding: 0 spacing.space(0.125) 0 spacing.space(0.75);

    display: flex;
    align-items: center;
    gap: spacing.space(0.5);

    line-height: 1.75;

    border-radius: 1rem;

    @include typography.font-size(16);

    @include colour.colour-border("keyline", 1px);

    &--remove {
      padding-right: 0;
      padding-left: 0;

      background: none;

      border: none;
      border-radius: 0;
    }
  }

  &__link {
    width: 1.5rem;
    height: 1.5rem;

    position: relative;

    font-size: 0;
    line-height: 0;

    text-decoration: none;

    border-radius: 100%;

    &::before,
    &::after {
      content: "";

      height: 1rem;
      margin-left: -1px;

      display: block;

      position: absolute;
      top: 0.25rem;
      left: 50%;

      @include colour.colour-border("font-base", 2px, solid, left);
    }

    &::before {
      transform: rotate(45deg);
    }

    &::after {
      transform: rotate(-45deg);
    }

    &:hover,
    &:focus-visible {
      @include colour.contrast;
    }
  }
}

